--- a/app/src/main/res/layout/frg_open_source.xml
+++ b/app/src/main/res/layout/frg_open_source.xml
@@ -115,6 +115,13 @@
                 android:text="htmlqb" />
 
 
+            <TextView
+                android:id="@+id/tv_JetPack"
+                style="@style/textViewStyle"
+                android:layout_below="@+id/tv_html"
+                android:text="jetPack" />
+
+
         </RelativeLayout>
 
 
