--- a/app/src/main/res/layout/frg_open_source.xml
+++ b/app/src/main/res/layout/frg_open_source.xml
@@ -126,7 +126,14 @@
                 style="@style/textViewStyle"
                 android:layout_below="@+id/tv_html"
                 android:layout_toEndOf="@id/tv_JetPack"
-                android:text="jetPackViewModel" />
+                android:text="jetPackViewModelLiveData" />
+
+            <TextView
+                android:id="@+id/tv_JetPack_R"
+                style="@style/textViewStyle"
+                android:layout_below="@+id/tv_html"
+                android:layout_toEndOf="@id/tv_JetPack_v"
+                android:text="jetPackRoom" />
 
 
         </RelativeLayout>
