数据库有问题，导致运行不过，还没有解决 JetPackRoomNote JetPackRoomNoteDao JetPackRoomNoteDatabase

--- a/app/src/main/res/layout/content_jet_pack_room.xml
+++ b/app/src/main/res/layout/content_jet_pack_room.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.activity.jetpack.JetPackRoomActivity"
+    tools:context=".ui.activity.jetpack.JetPackRoomNoteActivity"
     tools:showIn="@layout/activity_jet_pack_room">
 
 </android.support.constraint.ConstraintLayout>
