lifecycle  room  select 查询

--- a/app/src/main/res/layout/content_jet_pack_room.xml
+++ b/app/src/main/res/layout/content_jet_pack_room.xml
@@ -8,4 +8,9 @@
     tools:context=".ui.activity.jetpack.JetPackRoomNoteActivity"
     tools:showIn="@layout/activity_jet_pack_room">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
