lifecycle  room  update 更新数据

--- a/app/src/main/res/layout/item_jet_pach_list_content.xml
+++ b/app/src/main/res/layout/item_jet_pach_list_content.xml
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/d80"
+    android:layout_margin="@dimen/d5"
+    app:cardBackgroundColor="@color/c_FFFFFF"
+    app:cardCornerRadius="@dimen/d10"
+    app:cardElevation="@dimen/d2"
+    app:cardUseCompatPadding="false">
 
 
-    <TextView
-        android:id="@+id/tvNote"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/c_a9a9a9"
-        android:text="TextView"
-        android:textColor="@color/c_000000"
-        android:textSize="@dimen/text_size_26"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvNote"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="@color/c_000000"
+            android:textSize="@dimen/text_size_26" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/d10"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivRowDelete"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="@dimen/d7"
+                android:src="@drawable/icon_delete_line"
+                android:tint="#9e9e9e" />
+
+            <ImageView
+                android:id="@+id/ivRowEdit"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="@dimen/d7"
+                android:src="@drawable/icon_edit_line"
+                android:tint="#9e9e9e" />
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
