--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -81,7 +81,7 @@
     <ImageView
         android:id="@+id/iv_line"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/d0.5"
+        android:layout_height="@dimen/d0_5"
         android:layout_alignParentBottom="true"
         android:background="@color/c_979797" />
 
