--- a/app/src/main/res/layout/aty_material_design.xml
+++ b/app/src/main/res/layout/aty_material_design.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="Linnar"
+            android:text="图片加载"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mT1" />
 
