--- a/app/src/main/res/layout/aty_aidl_demo.xml
+++ b/app/src/main/res/layout/aty_aidl_demo.xml
@@ -95,4 +95,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tvMsgR" />
 
 
+    <TextView
+        android:id="@+id/tvMsgMessenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d10"
+        android:background="@drawable/shape_corner_button"
+        android:padding="@dimen/d10"
+        android:text="Messenger send"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMsgUR" />
+
 </android.support.constraint.ConstraintLayout>
