--- a/app/src/main/res/layout/frg_main_guide.xml
+++ b/app/src/main/res/layout/frg_main_guide.xml
@@ -119,6 +119,14 @@
                 android:layout_below="@+id/btn_life"
                 android:text="aidl通信" />
 
+            <Button
+                android:id="@+id/btn_handler"
+                style="@style/home_main_text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_aidl"
+                android:text="handler" />
+
 
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
