自定义TextView ，自定义view入门

--- a/app/src/main/res/layout/frg_main_guide.xml
+++ b/app/src/main/res/layout/frg_main_guide.xml
@@ -163,6 +163,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="自定义butterknife" />
+
+                <Button
+                    android:id="@+id/btn_define"
+                    style="@style/home_main_text_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="自定义view,重新来" />
             </LinearLayout>
         </LinearLayout>
 
