定义View - 玩转字体变色

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -55,5 +55,13 @@
         <attr name="stepTextColor" format="color" />
     </declare-styleable>
 
+    <!--ColorTrackTextView-->
+    <declare-styleable name="ColorTrackTextView">
+
+        <attr name="originColor" format="color"/>
+        <attr name="changeColor" format="color"/>
+
+    </declare-styleable>
+
 
 </resources>
