--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="图片加载"
+            android:text="可以变色的TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
@@ -55,14 +55,12 @@
             android:id="@+id/mDT4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d10"
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
-            app:layout_constraintCircle="@+id/mDT1"
-            app:layout_constraintCircleAngle="120"
-            app:layout_constraintCircleRadius="70dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/mDT3"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
         <TextView
