--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -59,7 +59,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="Linnar"
+            android:text="圆圈进度条"
             app:layout_constraintStart_toEndOf="@+id/mDT3"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
