--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -43,55 +43,92 @@
             android:id="@+id/mDT3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d10"
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="可以变色的TextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mDT1" />
+            app:layout_constraintStart_toEndOf="@+id/mDT2"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/mDT4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/d10"
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="圆圈进度条"
-            app:layout_constraintStart_toEndOf="@+id/mDT3"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
+
 
         <TextView
             android:id="@+id/mDT5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="Rating bar"
+            app:layout_constraintStart_toEndOf="@+id/mDT4"
+            app:layout_constraintTop_toBottomOf="@+id/mDT1" />
+
+        <TextView
+            android:id="@+id/mDT6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="其它"
+            app:layout_constraintStart_toEndOf="@+id/mDT5"
+            app:layout_constraintTop_toBottomOf="@+id/mDT1" />
+
+        <TextView
+            android:id="@+id/mDT7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="其它"
+            app:layout_constraintStart_toEndOf="@+id/mDT6"
+            app:layout_constraintTop_toBottomOf="@+id/mDT1" />
+
+        <TextView
+            android:id="@+id/mDT30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d100"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
-            app:layout_constraintEnd_toStartOf="@+id/mDT6"
+            app:layout_constraintEnd_toStartOf="@+id/mDT31"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
 
         <TextView
-            android:id="@+id/mDT6"
+            android:id="@+id/mDT31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d100"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
-            app:layout_constraintEnd_toStartOf="@+id/mDT7"
-            app:layout_constraintStart_toEndOf="@+id/mDT5"
+            app:layout_constraintEnd_toStartOf="@+id/mDT32"
+            app:layout_constraintStart_toEndOf="@+id/mDT30"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
-            android:id="@+id/mDT7"
+            android:id="@+id/mDT32"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d100"
@@ -99,7 +136,7 @@
             android:padding="@dimen/d5"
             android:text="Linnar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mDT6"
+            app:layout_constraintStart_toEndOf="@+id/mDT31"
             app:layout_constraintTop_toTopOf="parent" />
 
 
