自定义 字母索引

--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -84,7 +84,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="其它"
+            android:text="字母索引列表"
             app:layout_constraintStart_toEndOf="@+id/mDT5"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
