--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -101,6 +101,17 @@
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
         <TextView
+            android:id="@+id/mDT8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="View touch 事件分发"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mDT4" />
+
+        <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
