--- a/app/src/main/res/layout/frg_define_touch_view.xml
+++ b/app/src/main/res/layout/frg_define_touch_view.xml
@@ -11,6 +11,24 @@
     <com.mao.cn.learnDevelopProject.widgets.TouchView
         android:id="@+id/touchView"
         android:layout_width="@dimen/d200"
-        android:background="@color/c_69C614"
-        android:layout_height="@dimen/d200" />
+        android:layout_height="@dimen/d200"
+        android:background="@color/c_69C614" />
+
+
+    <com.mao.cn.learnDevelopProject.widgets.TouchViewGroup
+        android:id="@+id/touchViewGroup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/d10"
+        android:background="@color/c_ff4D30">
+
+
+        <com.mao.cn.learnDevelopProject.widgets.TouchViewInner
+            android:id="@+id/touchViewInner"
+            android:layout_width="@dimen/d200"
+            android:layout_height="@dimen/d200"
+            android:background="@color/c_69C614" />
+
+
+    </com.mao.cn.learnDevelopProject.widgets.TouchViewGroup>
 </LinearLayout>
