--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -112,10 +112,22 @@
             app:layout_constraintTop_toBottomOf="@+id/mDT4" />
 
         <TextView
+            android:id="@+id/mDT9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="touch 酷狗侧滑"
+            app:layout_constraintStart_toEndOf="@+id/mDT8"
+            app:layout_constraintTop_toBottomOf="@+id/mDT4" />
+
+        <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d100"
+            android:layout_marginTop="@dimen/d120"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
@@ -129,7 +141,7 @@
             android:id="@+id/mDT31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d100"
+            android:layout_marginTop="@dimen/d120"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
@@ -142,7 +154,7 @@
             android:id="@+id/mDT32"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d100"
+            android:layout_marginTop="@dimen/d120"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="Linnar"
