--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -99,4 +99,13 @@
     </declare-styleable>
 
 
+    <declare-styleable name="KGSlidingMenu">
+        <attr name="kgMenuRightMargin" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="SlidingMenu">
+        <attr name="menuRightMargin" format="dimension" />
+    </declare-styleable>
+
+
 </resources>
