--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -107,5 +107,9 @@
         <attr name="menuRightMargin" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="QQSlidingMenu">
+        <attr name="qqmenuRightMargin" format="dimension" />
+    </declare-styleable>
+
 
 </resources>
