--- a/app/src/main/res/layout/frg_pull.xml
+++ b/app/src/main/res/layout/frg_pull.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.fragment.MoviesFragment">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tvChange"
+            android:layout_width="wrap_content"
+            android:text="切换效果"
+            android:padding="@dimen/d10"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_14"
+            android:textColor="@color/black100"
+            android:background="@drawable/shape_corner_button"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tvADD"
+            android:layout_width="wrap_content"
+            android:text="添加"
+            android:padding="@dimen/d10"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_14"
+            android:textColor="@color/black100"
+            android:background="@drawable/shape_corner_button"
+            android:layout_height="wrap_content"/>
+
+
+        <TextView
+            android:id="@+id/tvRemove"
+            android:layout_width="wrap_content"
+            android:text="移除"
+            android:padding="@dimen/d10"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_14"
+            android:textColor="@color/black100"
+            android:background="@drawable/shape_corner_button"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</RelativeLayout>
+</LinearLayout>
