--- a/app/src/main/res/layout/item_pull.xml
+++ b/app/src/main/res/layout/item_pull.xml
@@ -6,9 +6,10 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
+        android:background="@color/c_ff4532"
         android:textColor="@color/black100"
         android:textSize="@dimen/text_size_16"
         tools:text="先睡觉" />
