--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -173,6 +173,18 @@
             app:layout_constraintTop_toBottomOf="@+id/mDT8" />
 
         <TextView
+            android:id="@+id/mDT14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:layout_marginStart="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="MD状态栏"
+            app:layout_constraintStart_toEndOf="@+id/mDT13"
+            app:layout_constraintTop_toBottomOf="@+id/mDT8" />
+
+        <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
