--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,5 +96,8 @@
     <color name="c_4a4a4a">#4a4a4a</color>
     <color name="c_ffd857">#ffd857</color>
 
+    <color name="colorPrimaryNew">#3F51B5</color>
+    <color name="colorPrimaryDarkNew">#303F9F</color>
+    <color name="colorAccentNew">#FF4081</color>
 
 </resources>
