--- a/app/src/main/res/layout/aty_define_status_bar.xml
+++ b/app/src/main/res/layout/aty_define_status_bar.xml
@@ -1,16 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-    <TextView
-        android:textSize="@dimen/text_size_28"
-        android:text="状态栏"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <com.mao.cn.learnDevelopProject.widgets.DefineScrollView
+        android:id="@+id/nsv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d300"
+                android:scaleType="centerCrop"
+                android:src="@drawable/demo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/d200"
+
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="状态栏"
+                android:textSize="@dimen/text_size_28" />
+
+        </LinearLayout>
+
+
+    </com.mao.cn.learnDevelopProject.widgets.DefineScrollView>
+
+
+    <include layout="@layout/include_header" />
+
+</RelativeLayout>
