md 实现知乎的效果

--- a/app/src/main/res/layout/aty_define_md_fruit.xml
+++ b/app/src/main/res/layout/aty_define_md_fruit.xml
@@ -17,6 +17,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:collapsedTitleGravity="center"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
