recyclerview 添加头部和底部

--- a/app/src/main/res/layout/aty_material_design.xml
+++ b/app/src/main/res/layout/aty_material_design.xml
@@ -44,15 +44,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d5"
+            android:layout_marginStart="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="图片加载"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mT1" />
-
+            app:layout_constraintStart_toEndOf="@+id/mT2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/mT4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:layout_marginStart="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="RecyclerView头部"
+            app:layout_constraintStart_toEndOf="@+id/mT3"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/mT8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d5"
