--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <!-- ActionMode的颜色 -->
         <item name="actionModeBackground">@color/colorPrimary</item>
+        <item name="android:listDivider">@drawable/divider_bg02</item>
     </style>
 
     <!--  <style name="loading_theme" parent="AppTheme">
